# keyframe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/keyframe/: __init__.py  __main__.py  benchmark.py  caption_bench.py  captioner.py  cli.py  config.py  embedders.py  ffmpeg_source.py  io_utils.py  logging_setup.py  pipeline.py  segmenter.py  selector.py  source.py  visualize.py  webapp.py
tests/: test_cli.py  test_config.py  test_embedders.py  test_io_utils.py  test_segmenter.py  test_selector.py
